Fix spacing of the header on smaller screens
Misc: Rename "Blog" to "Article" in a few places. Will get around to renaming all of it eventually, it essentially means the same thing but article is more of the vibe I'm going for than blog (more structured, researched, etc.)

--- a/src/components/blog/listing/ArticleListing.module.scss
+++ b/src/components/blog/listing/ArticleListing.module.scss
@@ -2,13 +2,13 @@
 
 .blog-listing {
   list-style: none;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
 
   @media (prefers-color-scheme: light) {
-    border-bottom: 1px dotted colors.$primary;
+    border-top: 1px dotted colors.$primary;
   }
   @media (prefers-color-scheme: dark) {
-    border-bottom: 1px dotted white;
+    border-top: 1px dotted white;
   }
 
   ul {
