--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -1,12 +1,26 @@
 .nav {
+  display: flex;
+  flex-wrap: wrap;
   font-size: 2rem;
-}
+  margin-top: 1rem;
+  column-gap: 3rem;
 
-.links {
-  display: inline;
-  li {
+  span {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  ul {
     display: inline;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    li {
+      display: inline;
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
   }
 }
